kubernetes/hapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lifebank-hapi
  name: lifebank-hapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lifebank-hapi
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lifebank-hapi
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: ${DOCKER_REGISTRY}/${IMAGE_NAME_HAPI}:${VERSION}
          imagePullPolicy: "Always"
          name: "lifebank-hapi"
          ports:
            - containerPort: 9090
