kubernetes/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lifebank-webapp
  name: lifebank-webapp
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
      protocol: TCP
  selector:
    app: lifebank-webapp
